; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_pack-redundant.c_pack_set_bytecount.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_pack-redundant.c_pack_set_bytecount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pack_list = type { %struct.pack_list*, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pack_list*)* @pack_set_bytecount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pack_set_bytecount(%struct.pack_list* %0) #0 {
  %2 = alloca %struct.pack_list*, align 8
  %3 = alloca i32, align 4
  store %struct.pack_list* %0, %struct.pack_list** %2, align 8
  store i32 0, i32* %3, align 4
  br label %4

4:                                                ; preds = %7, %1
  %5 = load %struct.pack_list*, %struct.pack_list** %2, align 8
  %6 = icmp ne %struct.pack_list* %5, null
  br i1 %6, label %7, label %29

7:                                                ; preds = %4
  %8 = load %struct.pack_list*, %struct.pack_list** %2, align 8
  %9 = getelementptr inbounds %struct.pack_list, %struct.pack_list* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = add nsw i64 %14, %12
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %3, align 4
  %17 = load %struct.pack_list*, %struct.pack_list** %2, align 8
  %18 = getelementptr inbounds %struct.pack_list, %struct.pack_list* %17, i32 0, i32 1
  %19 = load %struct.TYPE_2__*, %struct.TYPE_2__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = load i32, i32* %3, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %23, %21
  %25 = trunc i64 %24 to i32
  store i32 %25, i32* %3, align 4
  %26 = load %struct.pack_list*, %struct.pack_list** %2, align 8
  %27 = getelementptr inbounds %struct.pack_list, %struct.pack_list* %26, i32 0, i32 0
  %28 = load %struct.pack_list*, %struct.pack_list** %27, align 8
  store %struct.pack_list* %28, %struct.pack_list** %2, align 8
  br label %4

29:                                               ; preds = %4
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
